--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Net-Ident-1.23.tar.gz: d9d37f37372f293c170a1023e4c7170d9a42ead9
 sources:
-  "Net-Ident-1.23.tar.gz": d9d37f37372f293c170a1023e4c7170d9a42ead9
+  Net-Ident-1.24.tar.gz: ed9235ef35530f1768eee81875e12ee8a637f68e
